tests/base/parser/bad/type_t-map-cid-map-cid-underscore.scilla
scilla_version 0

library TestLib

(* This value type has a broken value type *)

let f : Map Uint128 Map Uint128 faulty
